tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestMutualTlsOrigination/invalid_client_cert/_test_context/DestinationRule.2390168162.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-fake-mtls-credential-a
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: fake-mtls-credential-a
          sni: external.external-4-16320.svc.cluster.local
